--- a/static/css/style.css
+++ b/static/css/style.css
@@ -426,6 +426,12 @@ html {
   margin-left: auto;
 }
 
+.container#blur.active {
+  filter: blur(20px);
+  pointer-events: none;
+  user-select: none;
+}
+
 .container-fluid {
   width: 100%;
   padding-right: 15px;
@@ -740,6 +746,33 @@ img {
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
+}
+
+.popup {
+  position: fixed;
+  left: 55%;
+  top: 45%;
+  transform: translate(-50%,-50%);
+  z-index: 9;
+  width: 400px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
+  display: none;
+  opacity: 0;
+  transition: 0.5s;
+}
+#popup.active {
+  top: 50%;
+  display: block;
+  opacity: 1;
+  transition: 0.5s;
+
 }
 
 .white-block-center {
@@ -1436,6 +1469,24 @@ button.disabled:focus {
 }
 
 .primary-default-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  border-radius: 4px;
+  padding: 10px 20px;
+  background-color: #2f49d1;
+  color: #fff;
+}
+
+.test-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
