password email reset

--- a/templates/reset_done.html
+++ b/templates/reset_done.html
@@ -22,11 +22,13 @@
         <section class="signup">
             <!-- <img src="images/signup-bg.jpg" alt=""> -->
             <div class="container">
-                <div class="signin-content">
-                    <form method="POST" action="" id="signin-form" class="signin-form">
-                        {% csrf_token %}
-                        <h2 class="form-title">login your account</h2>
-                        <div class="form-group">
+                <!-- <div class="signin-content"> -->
+                    <!-- <form method="POST" action="" id="signin-form" class="signin-form"> -->
+                        <!-- {% csrf_token %} -->
+                        <h2 class="form-title">Password reset</h2>
+                        <p><h3>Password Reset done</h3></p>
+                        <a href = "{% url 'emplog' %}">Log in </a>
+                        <!-- <div class="form-group">
                             <input type="text" class="form-input" name="username" id="username" placeholder="Enter Username"/>
                         </div>
                         <div class="form-group">
@@ -38,15 +40,19 @@
                         </div>
                         <div class="form-group">
                             <input type="submit" name="emplog" id="submit" class="form-submit" value="Sign up"/>
-                        </div>
+                        </div> -->
+                        <!-- {{form}}
+                        <input type ="submit" name = "Send Email"> -->
+
+
                     </form>
-                    <a href = "/reset_pass">
+                    <!-- <a href = "{% url 'workers' %}">
                         Forgotten Password ?</a>
                     
                     <p class="loginhere">
                         Welcome to WMS, It's great to have you!!
-                    </p>
-                </div>
+                    </p> -->
+                <!-- </div> -->
             </div>
         </section>
 
@@ -57,3 +63,5 @@
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
+
+
