--- a/templates/reset.html
+++ b/templates/reset.html
@@ -25,8 +25,9 @@
                 <div class="signin-content">
                     <form method="POST" action="" id="signin-form" class="signin-form">
                         {% csrf_token %}
-                        <h2 class="form-title">login your account</h2>
-                        <div class="form-group">
+                        <h2 class="form-title">Reset account password</h2>
+                        <p><h3>Enter your password twice in the same manner</h3></p>
+                        <!-- <div class="form-group">
                             <input type="text" class="form-input" name="username" id="username" placeholder="Enter Username"/>
                         </div>
                         <div class="form-group">
@@ -38,14 +39,18 @@
                         </div>
                         <div class="form-group">
                             <input type="submit" name="emplog" id="submit" class="form-submit" value="Sign up"/>
-                        </div>
+                        </div> -->
+                        {{form}}
+                        <input type ="submit" name = "Update Password">
+
+
                     </form>
-                    <a href = "/reset_pass">
+                    <!-- <a href = "{% url 'workers' %}">
                         Forgotten Password ?</a>
                     
                     <p class="loginhere">
                         Welcome to WMS, It's great to have you!!
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </section>
@@ -57,3 +62,6 @@
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
+
+
+
