--- a/templates/construction.html
+++ b/templates/construction.html
@@ -171,7 +171,7 @@
               </div>
               <div class="stat-cards-info-workers">
                 <p class="stat-cards-info__name-workers">{{i.sname}}</p>
-                <p class="stat-cards-info__title-workers">{{i.location}}</p>
+                <p class="stat-cards-info__title-workers">{{i.city}}</p>
               </div>
             </article></a>
           </div>
