--- a/templates/index.html
+++ b/templates/index.html
@@ -210,6 +210,7 @@
                   </tr>
                 </thead>
                 <tbody>
+                  {% for a in att %}
                   <tr>
                     
                     <td>
@@ -217,93 +218,26 @@
                         <i data-feather="user" aria-hidden="true"></i>
                       </div>
                     </td>
-                    <td>Harsh Tiwari</td>
                     <td>
-                      Borivali West
+                      <a href="{% url 'worker_profile' a.worker.id %}">
+                        {{a.worker.name}}</a>
+                    </td>
+                    <td>
+                      <a href="{% url 'construction_site_profile' a.site.id %}" >
+                      {{a.site.sname}}</a>
                     </td>
                     
-                    <td>17.04.2021</td>
-                    <td>09:27 AM</td>
+                    <td>{{a.ada}}</td>
+                    <td>{{a.atim}}</td>
                   </tr>
-                  <tr>
-                    
-                    <td>
-                      <div class="stat-cards-icon-workers-list primary">
-                        <i data-feather="user" aria-hidden="true"></i>
-                      </div>
-                    </td>
-                    <td>Ankit Yadav</td>
-                    <td>
-                      Borivali West
-                    </td>
-                    <td>23.04.2021</td>
-                    <td>09:31 AM</td>
-                  </tr>
-                  <tr>
-                    
-                    <td>
-                      <div class="stat-cards-icon-workers-list primary">
-                        <i data-feather="user" aria-hidden="true"></i>
-                      </div>
-                    </td>
-                    <td>Tanmay Shukla</td>
-                    <td>
-                      Borivali West
-                    </td>
-                    
-                    <td>17.04.2021</td>
-                    <td>09:23 AM</td>
-                  </tr>
-                  <tr>
-                    
-                    <td>
-                      <div class="stat-cards-icon-workers-list primary">
-                        <i data-feather="user" aria-hidden="true"></i>
-                      </div>
-                    </td>
-                    <td>Pratik Thakur</td>
-                    <td>
-                      Malad West
-                    </td>
-                    
-                    <td>17.04.2021</td>
-                    <td>09:28 AM</td>
-                  </tr>
-                  <tr>
-                    
-                    <td>
-                      <div class="stat-cards-icon-workers-list primary">
-                        <i data-feather="user" aria-hidden="true"></i>
-                      </div>
-                    </td>
-                    <td>Niraj Gupta</td>
-                    <td>
-                      Malad West
-                    </td>
-                    <td>17.04.2021</td>
-                    <td>09:29 AM</td>
-                  </tr>
-                  <tr>
-                    
-                    <td>
-                      <div class="stat-cards-icon-workers-list primary">
-                        <i data-feather="user" aria-hidden="true"></i>
-                      </div>
-                    </td>
-                    <td>Karan Yadav</td>
-                    <td>
-                      Malad West
-                    </td>
-                    <td>17.04.2021</td>
-                    <td>09:26 AM</td>
-                  </tr>
+                  {% endfor %}
                   <tr>
                     
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>View All</td>
+                    <td><a href="/attendance">View All</a></td>
                   </tr>
                 </tbody>
               </table>
@@ -314,71 +248,23 @@
             <article class="white-block">
               <div class="top-cat-title">
                 <h3>Construction Site</h3>
-                <p>28 Construction Sites</p>
+                <p>{{cnt}} Construction Sites</p>
               </div>
               <ul class="top-cat-list">
+                {% for c in con %}
                 <li>
-                  <a href="##">
+                  <a href="{% url 'construction_site_profile' c.id %}" >
                     <div class="top-cat-list__title">
-                      OM Complex
+                      {{c.sname}}
                     </div>
                     <div class="top-cat-list__subtitle">
-                      Swastik Nagar, Borivali West 
+                      {{c.city}}
                     </div>
                   </a>
                 </li>
+                {% endfor %}
                 <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      LN Tower 
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      SN Road, Malad West
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      Gokul Heights
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      Thakur Nagar, Kandivali East
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      Neon Heights
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      Suraj Nagar, Andheri West
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      Suraj Complex
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      Miraj Chowk, Dahisar West
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="##">
-                    <div class="top-cat-list__title">
-                      Laxmi Heights
-                    </div>
-                    <div class="top-cat-list__subtitle">
-                      Shanti Chowk, Dahisar West
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="##">
+                  <a href="/construction">
                     <div class="top-cat-list__title">
                       <span>View All</span>
                     </div>
