--- a/templates/workers.html
+++ b/templates/workers.html
@@ -67,6 +67,25 @@
                     </a>
                     <span class="msg-counter">2</span>
                 </li>
+                
+                
+
+                
+                
+                <!-- for sidebar toggle pls do not touch -->
+                <li>
+                  <a class="show-cat-btn" href="##">
+                      <!-- <span class="icon document" aria-hidden="true"></span>Posts -->
+                      <span class="category__btn transparent-btn" title="Open list">
+                      </span>
+                  </a>
+                  <ul class="cat-sub-menu">
+                  </ul>
+                </li>
+
+
+
+
             </ul>
             <span class="system-menu__title">system</span>
             <ul class="sidebar-body-menu">
@@ -106,6 +125,21 @@
         <h2 class="main-title">Worker List</h2>
     </div>
     <div class="main-nav-end">
+      
+
+
+
+      <!-- for sidebar toggle do not touch -->
+      <button class="sidebar-toggle transparent-btn" title="Menu" type="button">
+        <span class="sr-only">Toggle menu</span>
+        <span class="icon menu-toggle--gray" aria-hidden="true"></span>
+      </button>
+
+
+
+
+
+
       <button class="theme-switcher gray-circle-btn" type="button" title="Switch theme">
         <span class="sr-only">Switch theme</span>
         <i class="sun-icon" data-feather="sun" aria-hidden="true"></i>
