Payment , 1st graph

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2142,7 +2142,7 @@ label {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  background-color: #3350f0 !important;
+  background-color: #1b3cf7 !important;
   width: 253px;
   padding: 20px 15px 37px 20px;
   -webkit-transition: 0.5s all;
