--- a/templates/paysalary.html
+++ b/templates/paysalary.html
@@ -150,7 +150,7 @@
         <button href="##" class="nav-user-btn dropdown-btn" title="My profile" type="button">
           <span class="sr-only">My profile</span>
           <span class="nav-user-img">
-            <picture><source srcset="{% static 'img/avatar/avatar-illustrated-02.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-illustrated-02.png' %}" alt="User name"></picture>
+            <!-- <picture><source srcset="{% static 'img/avatar/avatar-illustrated-02.webp' %}" type="image/webp"><img src="{% static 'img/avatar/avatar-illustrated-02.png' %}" alt="User name"></picture> -->
           </span>
         </button>
         <ul class="users-item-dropdown nav-user-dropdown dropdown">
