--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2676,7 +2676,7 @@ label {
 
 .lang-switcher {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.1875;
   letter-spacing: 0.75px;
   color: #767676;
@@ -2793,6 +2793,23 @@ label {
   height: 100%;
 }
 
+.stat-cards-item-profile {
+  /* display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; */
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 24px 19px;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
+  box-shadow: 0px 15px 50px rgba(160, 163, 189, 0.1);
+  border-radius: 10px;
+  height: 100%;
+}
+
 .stat-cards-icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2810,6 +2827,7 @@ label {
   border-radius: 50%;
   margin-right: 9px;
 }
+
 
 .stat-cards-icon.primary {
   background-color: rgba(47, 73, 209, 0.1);
@@ -2837,6 +2855,8 @@ label {
   line-height: 1.2;
   color: #171717;
   margin-bottom: 4px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .stat-cards-info__title {
@@ -3448,14 +3468,25 @@ label {
 }
 
 .categories-table-img {
-  margin-right: 26px;
+  margin-right: 18px;
+  margin-left: 3px;
 }
 
+/* .profile-circle-img {
+  margin-right: 26px;
+} */
+
 .categories-table-img img {
-  width: 71px;
-  height: 47px;
-  border-radius: 6px;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
 }
+
+/* .profile-circle-img img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+} */
 
 .darkmode {
   background-color: #11111d;
