--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -139,6 +139,10 @@
 
 
 
+      <!-- for google translation -->
+      <div class="lang-switcher-wrapper">
+        <div id="google_element"></div>
+      </div>
 
       <button class="theme-switcher gray-circle-btn" type="button" title="Switch theme">
         <span class="sr-only">Switch theme</span>
@@ -323,6 +327,15 @@
 <script src="{% static 'plugins/feather.min.js' %}"></script>
 <!-- Custom scripts -->
 <script src="{% static 'js/script.js' %}"></script>
+
+<!-- for google translate -->
+<script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+<script>
+  function loadGoogleTranslate() {
+    new google.translate.TranslateElement("google_element");
+  }
+</script>
+
 </body>
 
 </html>
