--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
             </ul>
         </div>
     </div>
-    <div class="sidebar-footer">
+    <!-- <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
             <span class="sidebar-user-img">
                 <picture><source srcset="" type="image/webp"><img src="" alt=""></picture>
@@ -118,7 +118,7 @@
                 <span class="sidebar-user__subtitle">Support manager</span>
             </div>
         </a>
-    </div>
+    </div> -->
 </aside>
   <div class="main-wrapper">
     <!-- ! Main nav -->
@@ -144,7 +144,12 @@
 
 
 
+      <!-- for google translation -->
+      <div class="lang-switcher-wrapper">
+        <div id="google_element"></div>
+      </div>
 
+      <!-- for night mood -->
       <button class="theme-switcher gray-circle-btn" type="button" title="Switch theme">
         <span class="sr-only">Switch theme</span>
         <i class="sun-icon" data-feather="sun" aria-hidden="true"></i>
@@ -232,7 +237,8 @@
             </a>
           </div>
         </div>
-        <div id ="trychart"></div>
+        
+        <!-- for graph -->
         <script>
           
           var state ={
@@ -298,6 +304,11 @@
         <div class="row">
           <div class="col-lg-9">
             
+            <!-- graph -->
+            <div id ="trychart"></div>
+
+
+
             <div class="users-table table-wrapper">
               <table class="posts-table">
                 <thead>
@@ -477,6 +488,14 @@
 <script src="{% static 'plugins/feather.min.js' %}"></script>
 <!-- Custom scripts -->
 <script src="{% static 'js/script.js' %}"></script>
+
+<!-- for google translate -->
+<script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+<script>
+  function loadGoogleTranslate() {
+    new google.translate.TranslateElement({pageLanguage:"en", includedLanguages: "bn,hi,gu,mr,pa,ur,ta,te"},"google_element");
+  }
+</script>
 </body>
 
 </html>
