--- a/templates/mobindex.html
+++ b/templates/mobindex.html
@@ -148,7 +148,7 @@
           </ul>
         </div>
       </div>
-      <div class="sidebar-footer">
+      <!-- <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
           <span class="sidebar-user-img">
             <picture>
@@ -160,7 +160,7 @@
             <span class="sidebar-user__subtitle">Support manager</span>
           </div>
         </a>
-      </div>
+      </div> -->
     </aside>
 
     <div class="main-wrapper">
@@ -183,7 +183,12 @@
             </button>
 
 
+            <!-- for google translation -->
+      <div class="lang-switcher-wrapper">
+        <div id="google_element"></div>
+      </div>
 
+      <!-- for night mood -->
 
             <!-- <div class="lang-switcher-wrapper">
         <button class="lang-switcher transparent-btn" type="button">
@@ -784,6 +789,14 @@
   <script src="{% static 'plugins/feather.min.js' %}"></script>
   <!-- Custom scripts -->
   <script src="{% static 'js/script.js' %}"></script>
+
+  <!-- for google translate -->
+<script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+<script>
+  function loadGoogleTranslate() {
+    new google.translate.TranslateElement({pageLanguage:'en', includedLanguages: "bn,hi,gu,mr,pa,ur,ta,te"},"google_element");
+  }
+</script>
 </body>
 
 </html>
