--- a/templates/workers.html
+++ b/templates/workers.html
@@ -105,7 +105,7 @@
             </ul>
         </div>
     </div>
-    <div class="sidebar-footer">
+    <!-- <div class="sidebar-footer">
         <a href="##" class="sidebar-user">
             <span class="sidebar-user-img">
                 <picture><source srcset="" type="image/webp"><img src="" alt=""></picture>
@@ -115,7 +115,7 @@
                 <span class="sidebar-user__subtitle">Support manager</span>
             </div>
         </a>
-    </div>
+    </div> -->
 </aside>
   <div class="main-wrapper">
     <!-- ! Main nav -->
@@ -139,7 +139,12 @@
 
 
 
+      <!-- for google translation -->
+      <div class="lang-switcher-wrapper">
+        <div id="google_element"></div>
+      </div>
 
+      <!-- for night mood -->
       <button class="theme-switcher gray-circle-btn" type="button" title="Switch theme">
         <span class="sr-only">Switch theme</span>
         <i class="sun-icon" data-feather="sun" aria-hidden="true"></i>
@@ -339,6 +344,14 @@
     popup.classList.toggle('active');
   }
 
+</script>
+
+<!-- for google translate -->
+<script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+<script>
+  function loadGoogleTranslate() {
+    new google.translate.TranslateElement({pageLanguage:'en', includedLanguages: "bn,hi,gu,mr,pa,ur,ta,te"},"google_element");
+  }
 </script>
 </body>
 
